Auth module html files cleaning. Removed nonexistent CSS from HTML files:  * #edit-item  * .form-control  * .button-text  * #goto-login-button  * #password

--- a/frontend/core/src/main/webapp/static/app/auth/changePassword.html
+++ b/frontend/core/src/main/webapp/static/app/auth/changePassword.html
@@ -1,33 +1,33 @@
 <div class="no-slides-container" ng-controller="PasswordController">
-  <section id="edit-item" class="one-column-grid page">
+  <section class="one-column-grid page">
     <div class="column">
       <header class="heading-header">
         <h3>change password</h3>
       </header>
       <div class="simple-content-container">
-        <form role="form" id="change_password-form" name="change_passwordForm" novalidate>
+        <form role="form" name="change_passwordForm" novalidate>
 
           <div id="currentPassword" class="form-group">
             <label for="currentPassword" class="sr-only">old password</label>
-            <input type="password" name="currentPassword" class="simple-input" id="input-old-password" ng-model="user.currentPassword" placeholder="enter old password..." ng-minlength="7" ng-blur="currentPasswordAttempted=true" required />
+            <input type="password" name="currentPassword" class="simple-input" ng-model="user.currentPassword" placeholder="enter old password..." ng-minlength="7" ng-blur="currentPasswordAttempted=true" required />
             <p ng-show="change_passwordForm.currentPassword.$invalid && !change_passwordForm.currentPassword.$pristine && currentPasswordAttempted" class="validation-error">password must be 7 characters or more</p>
           </div>
 
           <div id="newPassword" class="form-group">
             <label for="newPassword" class="sr-only">new password</label>
-            <input type="password" name="newPassword" class="form-control simple-input" id="input-new-password" ng-model="user.newPassword" placeholder="enter new password..." ng-blur="newPasswordAttempted=true" required ng-minlength="7" />
+            <input type="password" name="newPassword" class="simple-input" ng-model="user.newPassword" placeholder="enter new password..." ng-blur="newPasswordAttempted=true" required ng-minlength="7" />
             <p ng-show="change_passwordForm.newPassword.$invalid && !change_passwordForm.newPassword.$pristine && newPasswordAttempted" class="validation-error">password must be 7 characters or more</p>
           </div>
 
           <div id="newPasswordReEnter" class="form-group">
             <label for="newPasswordReEnter" class="sr-only">new password again</label>
-            <input type="password" name="newPasswordReEnter" class="form-control simple-input" id="input-new-password-again" ng-model="user.reEnteredNewPassword" ng-blur="reEnterNewPasswordAttempted=true" placeholder="re-enter new password..." password-match="user.newPassword"  required ng-minlength="7"/>
+            <input type="password" name="newPasswordReEnter" class="simple-input" ng-model="user.reEnteredNewPassword" ng-blur="reEnterNewPasswordAttempted=true" placeholder="re-enter new password..." password-match="user.newPassword" ng-minlength="7" required />
             <p ng-show="change_passwordForm.newPasswordReEnter.$invalid && !change_passwordForm.newPasswordReEnter.$pristine && reEnterNewPasswordAttempted" class="validation-error">passwords don't match</p>
           </div>
 
           <div class="form-group vertical-buttons">
-            <button type="submit" id="change_password-button" class="wide-button normal-button" ng-disabled="!change_passwordForm.$valid" ng-click="changePassword()">
-              <span class="button-text">done</span>
+            <button type="submit" class="wide-button normal-button" ng-disabled="!change_passwordForm.$valid" ng-click="changePassword()">
+              <span>done</span>
             </button>
             <p ng-show="changePasswordFailed" class="validation-error">invalid old password</p>
             <p ng-show="changePasswordOffline" class="validation-error">can't connect to server. are you online?</p>
