--- a/frontend/core/src/main/webapp/static/app/auth/verify.html
+++ b/frontend/core/src/main/webapp/static/app/auth/verify.html
@@ -9,8 +9,8 @@
           email verified. press the button below to access your extended mind.
         </span>
         <div class="button-container">
-          <button type="submit" id="goto-login-button" class="wide-button normal-button" ng-click="gotoService()">
-            <span class="button-text">continue</span>
+          <button type="submit" class="wide-button normal-button" ng-click="gotoService()">
+            <span>continue</span>
           </button>
         </div>
       </div>
