--- a/frontend/core/src/main/webapp/static/app/tasks/snooze.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/snooze.html
@@ -31,7 +31,7 @@
   <div ng-if="openSnooze.pikaday.isVisible" class="item-actions pikaday-animation">
     <div class="pikaday-embedded" pikaday bound="false" default-date="{{task.date}}" set-default-date="true"></div>
     <button ng-if="openSnooze.pikaday.hasDoneButton" type="button" class="wide-button normal-button" ng-click="pikadayEditDone()">
-      <span class="button-text">done</span>
+      <span>done</span>
     </button>
   </div>
 </div>
