--- a/frontend/core/src/main/webapp/static/app/auth/errorMessage.html
+++ b/frontend/core/src/main/webapp/static/app/auth/errorMessage.html
@@ -1,4 +1,4 @@
-<div id="errorMessage">
+<div>
   <h3 class="danger-heading" ng-bind="errorMessageHeading"></h3>
   <div class="danger-text" ng-bind="errorMessageText"></div>
 </div>
