--- a/frontend/core/src/main/webapp/static/app/auth/forgot.html
+++ b/frontend/core/src/main/webapp/static/app/auth/forgot.html
@@ -8,15 +8,15 @@
         <span class="instruction-text">
           press send button below and we will send you an email to <p class="content">{{user.email}}</p> with instructions on how to change your password
         </span>
-        <form role="form" id="forgot-form" name="forgotForm" novalidate>
+        <form role="form" name="forgotForm" novalidate>
           <div class="form-group button-container vertical-buttons">
-            <button type="submit" id="send-button" class="wide-button normal-button" ng-disabled="!forgotForm.$valid" ng-click="sendInstructions()">
-              <span class="button-text">send</span>
+            <button type="submit" class="wide-button normal-button" ng-disabled="!forgotForm.$valid" ng-click="sendInstructions()">
+              <span>send</span>
             </button>
             <p ng-show="sendFailed" class="validation-error">you are not an extended mind user</p>
             <p ng-show="sendOffline" class="validation-error">can't connect to server. are you online?</p>
-            <button type="submit" id="cancel-button" class="wide-button cancel-button" ng-click="gotoLogin()">
-              <span class="button-text">cancel</span>
+            <button type="submit" class="wide-button cancel-button" ng-click="gotoLogin()">
+              <span>cancel</span>
             </button>
           </div>
         </form>
@@ -26,8 +26,8 @@
           instructions sent. when you have changed your password, press the button below to access your extended mind.
         </span>
         <div class="button-container">
-          <button type="submit" id="goto-login-button" class="wide-button normal-button" ng-click="gotoLogin()">
-            <span class="button-text">go to login</span>
+          <button type="submit" class="wide-button normal-button" ng-click="gotoLogin()">
+            <span>go to login</span>
           </button>
         </div>
       </div>
@@ -35,26 +35,26 @@
         <span class="instruction-text">
           change password for <p class="content">{{user.email}}</p>
         </span>
-        <form role="form" id="reset-form" name="resetForm" novalidate>
+        <form role="form" name="resetForm" novalidate>
           <div class="form-group button-container vertical-buttons">
             <div id="password" class="form-group">
               <label for="password" class="sr-only">password</label>
-              <input type="password" name="password" class="form-control simple-input" id="input-password" ng-model="user.password" placeholder="enter new password..." ng-blur="passwordAttempted=true" required ng-minlength="7" />
+              <input type="password" name="password" class="simple-input" ng-model="user.password" ng-blur="passwordAttempted=true" ng-minlength="7" placeholder="enter new password..." required/>
               <p ng-show="resetForm.password.$invalid && !resetForm.password.$pristine && passwordAttempted" class="validation-error">password must be 7 characters or more</p>
             </div>
             <div id="passwordReEnter" class="form-group">
               <label for="passwordReEnter" class="sr-only">password again</label>
-              <input type="password" name="passwordReEnter" class="form-control simple-input" id="input-password-again" ng-model="user.reEnteredPassword" ng-blur="reEnterAttempted=true" placeholder="re-enter new password..." password-match="user.password"  required ng-minlength="7"/>
+              <input type="password" name="passwordReEnter" class="simple-input" ng-model="user.reEnteredPassword" ng-blur="reEnterAttempted=true" password-match="user.password" ng-minlength="7" placeholder="re-enter new password..." required/>
               <p ng-show="resetForm.passwordReEnter.$invalid && !resetForm.passwordReEnter.$pristine && reEnterAttempted" class="validation-error">passwords don't match</p>
             </div>
-            <button type="submit" id="send-button" class="wide-button normal-button" ng-disabled="!resetForm.$valid" ng-click="resetPassword()">
-              <span class="button-text">login</span>
+            <button type="submit" class="wide-button normal-button" ng-disabled="!resetForm.$valid" ng-click="resetPassword()">
+              <span>login</span>
             </button>
             <p ng-show="resetFailed" class="validation-error">reseting password failed</p>
             <p ng-show="resetOffline" class="validation-error">can't connect to server. are you online?</p>
             <p ng-show="loginFailed" class="validation-error">could not login with new password</p>
-            <button type="submit" id="cancel-button" class="wide-button cancel-button" ng-click="gotoLogin()">
-              <span class="button-text">cancel</span>
+            <button type="submit" class="wide-button cancel-button" ng-click="gotoLogin()">
+              <span>cancel</span>
             </button>
           </div>
         </form>
