--- a/frontend/core/src/main/webapp/static/app/auth/launch.html
+++ b/frontend/core/src/main/webapp/static/app/auth/launch.html
@@ -5,15 +5,15 @@
         <span class="icon-logo-with-text"></span>
       </div>
       <div class="content">
-        <form role="form" id="launch-form" name="launchForm" novalidate>
+        <form role="form" name="launchForm" novalidate>
           <div id="email" class="form-group">
             <label for="email" class="sr-only">email</label>
-            <input type="email" name="email" class="simple-input" id="input-email" ng-model="user.email" placeholder="enter email..." ng-blur="emailAttempted=true" required />
+            <input type="email" name="email" class="simple-input" ng-model="user.email" placeholder="enter email..." ng-blur="emailAttempted=true" required />
             <p ng-show="launchForm.email.$invalid && !launchForm.email.$pristine && emailAttempted" class="validation-error">not a valid email address</p>
           </div>
           <div class="form-group button-container">
-            <button type="submit" id="launch-button" class="wide-button normal-button" ng-disabled="!launchForm.$valid" ng-click="launchUser()">
-              <span class="button-text">done</span>
+            <button type="submit" class="wide-button normal-button" ng-disabled="!launchForm.$valid" ng-click="launchUser()">
+              <span>done</span>
             </button>
             <p ng-show="launchFailed" class="validation-error">invalid email</p>
             <p ng-show="launchOffline" class="validation-error">can't connect to server. are you online?</p>
