--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -1,7 +1,7 @@
 <div id="menu-content" class="swiper-no-swiping" ng-controller="MenuController">
   <ul>
     <li class="account-link">
-      <a href class="system-link" ng-class="getFeatureClass('account')" ng-click="gotoFeature('account')">{{getActiveOwnerName()}}</a>
+      <a href ng-class="getFeatureClass('account')" ng-click="gotoFeature('account')">{{getActiveOwnerName()}}</a>
     </li>
     <li>
       <a href class="feature-link" ng-class="getFeatureClass('inbox')" ng-click="gotoFeature('inbox')">inbox</a>
@@ -13,16 +13,15 @@
       <a href class="feature-link" ng-class="getFeatureClass('notes')" ng-click="gotoFeature('notes')">notes</a>
     </li>
     <li>
-      <div class="lists-heading-container" >
+      <div class="lists-heading-container">
         <a href class="lists-link" ng-class="getFeatureClass('lists')" ng-click="gotoFeature('lists')">lists</a>
         <a href ng-class="getFeatureClass('lists')" class="hide-expand-link" ng-click="toggleLists()">
           <span ng-if="lists.length && isListsVisible()">-</span>
           <span ng-if="lists.length && !isListsVisible()">+</span>
         </a>
       </div>
-      <ul class="lists" ng-if="isListsVisible() && lists.length > 0">
+      <ul ng-if="isListsVisible() && lists.length > 0">
         <li class="list" ng-repeat="list in lists" ng-class="$last && 'list-last'">
-          <span class="left-margin"></span>
           <a href class="list-link" ng-class="getListClass(list)" ng-click="gotoList(list)">{{getListTitleText(list)}}</a>
         </li>
       </ul>
@@ -31,13 +30,13 @@
       <a href class="feature-link" ng-class="getFeatureClass('archive')" ng-click="gotoFeature('archive')">archive</a>
     </li>
     <li>
-      <a href class="system-link" ng-class="getFeatureClass('dashboard')" ng-click="gotoFeature('dashboard')">dashboard</a>
+      <a href ng-class="getFeatureClass('dashboard')" ng-click="gotoFeature('dashboard')">dashboard</a>
     </li>
     <li ng-if="isAdmin()">
-      <a href class="system-link" ng-class="getFeatureClass('admin')" ng-click="gotoFeature('admin')">admin</a>
+      <a href ng-class="getFeatureClass('admin')" ng-click="gotoFeature('admin')">admin</a>
     </li>
     <li class="menu-last">
-      <a href class="system-link" ng-class="getFeatureClass('settings')" ng-click="gotoFeature('settings')">settings</a>
+      <a href ng-class="getFeatureClass('settings')" ng-click="gotoFeature('settings')">settings</a>
     </li>
   </ul>
 </div>
