--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -34,7 +34,7 @@
           <footer ng-if="(items.length > 0 && sortingItem === undefined)">
             <nav id="inbox-footer" class="swiper-no-swiping item-actions" role="navigation">
               <button id="scroll-to-element" class="wide-button border-button" ng-click="sortInbox()">
-                <span class="button-text" ng-bind="getSortingText()"></span>
+                <span ng-bind="getSortingText()"></span>
               </button>
             </nav>
           </footer>
