--- a/frontend/core/src/main/webapp/static/app/auth/signup.html
+++ b/frontend/core/src/main/webapp/static/app/auth/signup.html
@@ -23,7 +23,7 @@
           </div>
           <div class="form-group table-wrapper">
             <input type="checkbox" name="agree" id="agree" class="left-checkbox-wrapper" ng-model="user.agree" ng-true-value="true" />
-            <label for="agree" class="checkbox swiper-no-swiping"></label>
+            <label for="agree" class="swiper-no-swiping"></label>
             <span id="agreeText" class="center-input-wrapper">I have read and agree to the <a href ng-click="gotoTermsOfService()">terms of service</a> and <a href ng-click="gotoPrivacyPolicy()">privacy policy</a></span>
           </div>
           <div class="form-group button-container">
