Main module html files cleaning. Removed nonexistent CSS from HTML files:  * #note-teaser  * .border-right

--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -1,4 +1,4 @@
-<nav class="swiper-no-swiping" role="navigation" ng-controller="FooterController">
+<nav role="navigation" class="swiper-no-swiping" ng-controller="FooterController">
 
   <ul ng-if="hasVisibleToasterNotification()" class="horizontally-justified toaster-notification" ng-mouseover="pauseToasterTimer()" ng-mouseleave="resumeToasterTimer()">
     <li class="justified-element left-slide-link">
