--- a/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
@@ -1,4 +1,4 @@
-<nav id="page-header" class="swiper-no-swiping" role="navigation" ng-controller="HeaderController">
+<nav class="swiper-no-swiping" role="navigation" ng-controller="HeaderController">
   <div class="active-item-container">
     <button ng-if="!isDatepickerVisible" id="menu-button" type="button" ng-click="toggleMenu()" alt="menu" ng-disabled="onboardingInProgress">
       <span class="icon-menu"></span>
