--- a/frontend/core/src/main/webapp/static/app/notes/recent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/recent.html
@@ -8,7 +8,7 @@
           <div ng-repeat="note in allNotes | orderBy:'modified':true | limitTo: getRecentNotesLimit()" ng-init="newNote = {}">
             <div accordion-title="note" edit-item="editNote(note)" edit-item-fields="editNoteFields(note)" has-complete="false" toggle-complete>
               <div ng-if="note.content" class="teaser">
-                <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
+                <a href ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
               </div>
             </div>
             <div ng-if="isOpen(note)" editable-field-container="auto">
