--- a/frontend/core/src/main/webapp/static/app/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/context.html
@@ -8,7 +8,7 @@
             <div>
               <div item-core-fields="context" item-core-fields-details="contextDetails"></div>
               <ul class="button-row">
-                <li class="button-container left-of-two border-right">
+                <li class="button-container left-of-two">
                   <button class="normal-button" type="button" ng-click="closeAndCall(context, contextQuickEditDone)">
                     done
                   </button>
