--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -14,11 +14,11 @@
               </div>
             </div>
           </div>
-          <form class="add-element" role="form" name="itemToInbox" ng-init="newItem = {}" ng-submit="callAndRefresh(addNewItem, newItem)" autocapitalize="none" autocorrect="off" add-item data-snap-ignore="{{ignoreSnap}}">
+          <form role="form" name="itemToInbox" class="add-element" ng-init="newItem = {}" ng-submit="callAndRefresh(addNewItem, newItem)" add-item data-snap-ignore="{{ignoreSnap}}" autocapitalize="none" autocorrect="off">
             <div class="form-group" editable-field-container="disable">
-              <label class="sr-only" for="itemTitle">title</label>
+              <label for="itemTitle" class="sr-only">title</label>
               <div>
-                <input type="text" id="itemTitle" class="simple-input" ng-model="newItem.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add item..." maxlength="128" editable-field/>
+                <input type="text" id="itemTitle" class="simple-input" ng-model="newItem.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" editable-field placeholder="add item..." maxlength="128" />
               </div>
             </div>
           </form>
@@ -32,8 +32,8 @@
             <p class="instruction-text-chapter">use <b>sort inbox</b> to sort your items into <b>tasks</b>, <b>notes</b> and <b>lists</b><br/></p>
           </div>
           <footer ng-if="(items.length > 0 && sortingItem === undefined)">
-            <nav id="inbox-footer" class="swiper-no-swiping item-actions" role="navigation">
-              <button id="scroll-to-element" class="wide-button border-button" ng-click="sortInbox()">
+            <nav role="navigation" class="swiper-no-swiping item-actions">
+              <button class="wide-button border-button" ng-click="sortInbox()">
                 <span ng-bind="getSortingText()"></span>
               </button>
             </nav>
