--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -2,22 +2,22 @@
   <div class="item-actions swiper-no-swiping" data-snap-ignore="true" ng-switch-default>
     <ul class="button-row">
       <li class="button-container left-of-four">
-        <button class="default-button" type="button" ng-click="itemToTask(item)">
+        <button type="button" class="default-button" ng-click="itemToTask(item)">
           <span>task</span>
         </button>
       </li>
       <li class="button-container center-of-four">
-        <button class="default-button" type="button" ng-click="itemToNote(item)">
+        <button type="button" class="default-button" ng-click="itemToNote(item)">
           <span>note</span>
         </button>
       </li>
       <li class="button-container center-of-four">
-        <button class="default-button" type="button" ng-click="itemToList(item)">
+        <button type="button" class="default-button" ng-click="itemToList(item)">
           <span>list</span>
         </button>
       </li>
       <li class="button-container right-of-four">
-        <button class="delete-button" type="button" ng-click="deleteItem(item)">
+        <button type="button" class="delete-button" ng-click="deleteItem(item)">
           <span>delete</span>
         </button>
       </li>
@@ -25,7 +25,7 @@
   </div>
 
   <div ng-switch-when="task">
-    <div class="swiper-no-swiping item-actions"  data-snap-ignore="true" ng-init="openSnooze = {isOpen: false}">
+    <div class="swiper-no-swiping item-actions" data-snap-ignore="true" ng-init="openSnooze = {isOpen: false}">
       <div ng-if="openSnooze.isOpen === false" class="form-group item-actions">
         <div ng-if="task.date">
           <label for="taskDue" class="sr-only">select date...</label>
@@ -39,7 +39,7 @@
       <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
     </div>
     <div class="item-actions">
-      <button class="wide-button normal-button" type="button" ng-click="closeAndCall(task, taskEditDone)">
+      <button type="button" class="wide-button normal-button" ng-click="closeAndCall(task, taskEditDone)">
         <span>done</span>
       </button>
     </div>
@@ -48,7 +48,7 @@
   <div ng-switch-when="note">
     <div ng-include="'static/app/notes/noteCoreFields.html'"></div>
     <div class="item-actions">
-      <button class="wide-button normal-button" type="button" ng-click="closeAndCall(note, noteEditDone)">
+      <button type="button" class="wide-button normal-button" ng-click="closeAndCall(note, noteEditDone)">
         <span>done</span>
       </button>
     </div>
