--- a/frontend/core/src/main/webapp/static/app/main/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/main/listNotes.html
@@ -1,4 +1,4 @@
-<section id="list-notes" class="two-column-grid page">
+<section class="two-column-grid page">
   <div class="column">
     <div ng-hide="omnibarVisible" class="page-content-container">
       <div class="inner-page-content-container" scroll-to swiper-prevent>
@@ -7,7 +7,7 @@
           <div ng-repeat="note in notes | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
             <div accordion-title="note" edit-item="editNote(note)" edit-item-fields="editNoteFields(note)" has-complete="false" toggle-complete>
               <div ng-if="note.content" class="teaser">
-                <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
+                <a href ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
               </div>
             </div>
             <div ng-if="isOpen(note)" editable-field-container="auto">
