--- a/frontend/core/src/main/webapp/static/app/main/listProperties.html
+++ b/frontend/core/src/main/webapp/static/app/main/listProperties.html
@@ -1,34 +1,34 @@
-<section id="list-properties" class="two-column-grid page">
+<section class="two-column-grid page">
   <div class="column">
     <div ng-hide="omnibarVisible && isActiveSlide('properties')" class="page-content-container">
       <h3>properties</h3>
       <div editable-field-container>
         <div class="form-group">
-          <label class="sr-only" for="listTitle">title</label>
-          <textarea id="listTitle" type="text" ng-keypress="evaluateKeyPress($event)" class="simple-input swiper-no-swiping" ng-model="list.title" placeholder="title..." maxlength="128" required msd-elastic editable-field /></textarea>
+          <label for="listTitle" class="sr-only">title</label>
+          <textarea type="text" id="listTitle" class="simple-input swiper-no-swiping" ng-model="list.title" ng-keypress="evaluateKeyPress($event)" required msd-elastic editable-field placeholder="title..." maxlength="128"/></textarea>
         </div>
         <div class="form-group">
-          <label class="sr-only" for="listLink">url</label>
-          <input type="text" id="listLink" class="simple-input" ng-model="list.link" placeholder="url..." editable-field>
+          <label for="listLink" class="sr-only">url</label>
+          <input type="text" id="listLink" class="simple-input" ng-model="list.link" editable-field placeholder="url...">
         </div>
         <div class="form-group">
-          <label class="sr-only" for="listDescription">description</label>
-          <textarea id="listDescription" class="simple-input" ng-model="list.description" placeholder="description..." maxlength="1024" msd-elastic editable-field></textarea>
+          <label for="listDescription" class="sr-only">description</label>
+          <textarea id="listDescription" class="simple-input" ng-model="list.description" msd-elastic editable-field placeholder="description..." maxlength="1024"></textarea>
         </div>
 
         <ul class="button-row swiper-no-swiping" data-snap-ignore="true">
           <li class="button-container left-of-three">
-            <button class="normal-button" type="button" ng-click="saveListAndMoveToLists(list)">
+            <button type="button" class="normal-button" ng-click="saveListAndMoveToLists(list)">
               save
             </button>
           </li>
           <li class="button-container center-of-three">
-            <button class="default-button" type="button" ng-click="archiveListAndMoveToLists(list)">
+            <button type="button" class="default-button" ng-click="archiveListAndMoveToLists(list)">
               archive
             </button>
           </li>
           <li class="button-container right-of-three">
-            <button class="delete-button" type="button" ng-click="deleteListAndMoveToLists(list)">
+            <button type="button" class="delete-button" ng-click="deleteListAndMoveToLists(list)">
               delete
             </button>
           </li>
