--- a/frontend/core/src/main/webapp/static/app/main/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/main/listTasks.html
@@ -1,4 +1,4 @@
-<section id="list-tasks" class="two-column-grid page">
+<section class="two-column-grid page">
   <div class="column">
     <div ng-hide="omnibarVisible" class="page-content-container">
       <div class="inner-page-content-container" scroll-to swiper-prevent>
