--- a/frontend/core/src/main/webapp/static/app/notes/keywords.html
+++ b/frontend/core/src/main/webapp/static/app/notes/keywords.html
@@ -1,4 +1,4 @@
-<section id="notes-keywords" class="two-column-grid page">
+<section class="two-column-grid page">
   <div class="column">
     <div ng-hide="omnibarVisible && isActiveSlide('keywords')" class="page-content-container">
       <div class="inner-page-content-container" scroll-to swiper-prevent>
@@ -11,10 +11,10 @@
               </a>
             </li>
             <li>
-              <form class="add-element" role="form" name="addKeywordsForm" ng-submit="callAndRefresh(addKeyword, newKeyword)" autocapitalize="none" autocorrect="off" add-item>
+              <form role="form" name="addKeywordsForm" class="add-element" ng-submit="callAndRefresh(addKeyword, newKeyword)" add-item autocapitalize="none" autocorrect="off">
                 <div class="form-group" editable-field-container="disable">
-                  <label class="sr-only" for="keywordTitle">title</label>
-                  <input type="text" id="keywordTitle" class="simple-input" ng-model="newKeyword.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add keyword..." editable-field/>
+                  <label for="keywordTitle" class="sr-only">title</label>
+                  <input type="text" id="keywordTitle" class="simple-input" ng-model="newKeyword.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" editable-field placeholder="add keyword..."/>
                 </div>
               </form>
             </li>
