--- a/frontend/core/src/main/webapp/static/app/notes/noteCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteCoreFields.html
@@ -1,7 +1,7 @@
-<div id="noteCoreFields" class="swiper-no-swiping" data-snap-ignore="true">
+<div class="swiper-no-swiping" data-snap-ignore="true">
   <div lists-select-options>
     <div ng-if="!addNewListVisible" class="form-group select-list-visible-animation">
-      <label class="sr-only" for="noteParent">parent</label>
+      <label for="noteParent" class="sr-only">parent</label>
       <select class="simple-input swiper-no-swiping" id="noteParent" ng-model="note.relationships.list" ng-options="list.uuid as list.title for list in listsSelectOptions" options-disabled="list.delimiter for list in listsSelectOptions" editable-field>
         <option value="">select list...</option>
       </select>
