--- a/frontend/core/src/main/webapp/static/app/notes/recent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/recent.html
@@ -1,4 +1,4 @@
-<section id="notes-recent" class="two-column-grid page">
+<section class="two-column-grid page">
   <div class="column">
     <div ng-hide="omnibarVisible && isActiveSlide('home')" class="page-content-container">
       <div class="inner-page-content-container" scroll-to swiper-prevent>
